--- a/src/components/Contact/Contact.module.scss
+++ b/src/components/Contact/Contact.module.scss
@@ -7,6 +7,8 @@
     align-items: center;
     .contactNameSection {
       display: flex;
+      margin: 0;
+
       align-items: center;
       .avatar {
         border-radius: 50%;
@@ -20,6 +22,7 @@
     }
     .amount {
       font-size: 20px;
+      margin: 0;
     }
   }
 }
