--- a/src/components/AccountsList/AccountsList.module.scss
+++ b/src/components/AccountsList/AccountsList.module.scss
@@ -5,7 +5,6 @@
   padding: 1rem;
 }
 .field {
-  margin: 1rem 0;
   width: 100%;
 }
 .green {
@@ -19,7 +18,7 @@
   justify-content: space-between;
   align-items: center;
   .addCustomerButton {
-    margin-right: 1rem;
+    // margin-right: 1rem;
   }
   .addCustomerLabel {
     margin-left: 0.5rem;
