--- a/src/components/Contact/Contact.module.scss
+++ b/src/components/Contact/Contact.module.scss
@@ -1,4 +1,5 @@
 .contactContainer {
+  height: 3.5rem;
   .sectionContainer {
     display: flex;
     justify-content: space-between;
@@ -12,12 +13,11 @@
       align-items: center;
       .avatar {
         border-radius: 50%;
-        background-color: green;
         padding: 10px 18px;
         margin: 0 10px;
-        color: white;
       }
       .contactName {
+        margin-left: 0.5rem;
       }
     }
     .amount {
