--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -126,6 +126,7 @@
 }
 
 .accountPageContainer {
+  height: 3rem;
   .headerContainer {
     display: flex;
     justify-content: space-between;
@@ -140,3 +141,11 @@
   display: flex;
   flex-wrap: wrap;
 }
+
+.hide {
+  display: none;
+}
+.show {
+  display: block;
+}
+
