--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,6 +2,9 @@ html,
 body {
   padding: 0;
   margin: 0;
+  background-color: #29295e;
+  color: white;
+  padding: 1rem;
   font-family: Poppins, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto,
     Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
@@ -14,4 +17,5 @@ a {
 * {
   box-sizing: border-box;
   font-family: Poppins;
+  color: white !important;
 }
