--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4,7 +4,7 @@ body {
   margin: 0;
   background-color: #29295e;
   color: white;
-  padding: 1rem;
+  padding: 6px;
   font-family: Poppins, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto,
     Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
