--- a/styles/globals.css
+++ b/styles/globals.css
@@ -3,7 +3,7 @@ body {
   padding: 0;
   margin: 0;
   background-color: #29295e;
-  color: white;
+  /* color: white; */
   padding: 6px;
   font-family: Poppins, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto,
     Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
@@ -17,5 +17,5 @@ a {
 * {
   box-sizing: border-box;
   font-family: Poppins;
-  color: white !important;
+  /* color: white !important; */
 }
