--- a/src/components/Contact/Contact.module.scss
+++ b/src/components/Contact/Contact.module.scss
@@ -1,5 +1,5 @@
 .contactContainer {
-  height: 3.5rem;
+  // height: 3.5rem;
   .sectionContainer {
     display: flex;
     justify-content: space-between;
@@ -9,7 +9,8 @@
     .contactNameSection {
       display: flex;
       margin: 0;
-
+  //  flex: 1;
+   
       align-items: center;
       .avatar {
         border-radius: 50%;
@@ -23,6 +24,8 @@
     .amount {
       font-size: 20px;
       margin: 0;
+      // flex: 1;
+      text-align: end;
     }
   }
 }
